# rock-paper-scissors

./: .gitignore  LICENSE  Makefile  cam.py  evaluate.py  index.ipynb  predict.py  pyproject.toml  readme.md  train.py
.dvc/: config
configs/: basic_config.py
data/: webcam_test.dvc  webcam_train.dvc  webcam_val.dvc
notebooks/: class_activations.ipynb  data_augmentation.ipynb  eda.ipynb
rock_paper_scissors/: __init__.py  activation_maps.py  datasets.py  debug.py  models.py  optimizers.py  schedulers.py
scripts/: capture_webcam_images.py  convert_h5_to_tfjs.sh  merge_datasets.sh
