[tool.poetry]
name = "frtgnn-rock-paper-scissor"
version = "0.1.0"
description = ""
authors = ["Roman Glushko <roman.glushko.m@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.5"
tensorflow = "^2.4.1"
keract = "^4.4.0"
tensorflow-datasets = "^4"
morty = "^0.1.0"
ipykernel = "^5.4.3"
matplotlib = "^3.3.4"
pydot = "^1.4.1"
graphviz = "^0.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
