[tool.poetry]
name = "frtgnn-rock-paper-scissor"
version = "0.1.0"
description = ""
authors = ["Roman Glushko <roman.glushko.m@gmail.com>"]
license = "MIT"

packages = [
    { include = "rock_paper_scissors" },
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.5"
tensorflow = "^2.4.1"
keract = "^4.4.0"
tensorflow-datasets = "^4"
morty = "0.2.3-dev"
ipykernel = "^5.4.3"
matplotlib = "^3.4.2"
pydot = "^1.4.1"
graphviz = "^0.16"
tensorflow-gpu = "2.5"
albumentations = "^0.5.2"
jupyter = "^1.0.0"
opencv-python = "^4.5.2"
wandb = "^0.10.30"
tensorflowjs = "^3.6.0"
tf-explain = "^0.3.0"
shap = "^0.39.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
